--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -1,12 +1,11 @@
 ---
-title: Secure communication using AWS VPC Lattice
-description: Route traffic to subgraphs on your AWS VPC
+title: Securely communicate with subgraphs on your AWS VPC
 noIndex: true
 ---
 
 > Cloud Dedicated is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to [get in touch](mailto:cloud@apollographql.com).
 
-To send traffic to your subgraphs running in an AWS VPC without exposing them to the internet, Apollo GraphOS Cloud leverages [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/). With Lattice, you can define services and share them with the Apollo AWS organization. Apollo GraphOS Cloud can then send traffic directly to your subgraphs without using VPC peering.
+Apollo GraphOS Cloud leverages [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an AWS VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization. Apollo GraphOS Cloud can then send traffic directly to your subgraphs without using VPC peering.
 
 ```mermaid
 flowchart LR;
@@ -17,9 +16,9 @@ flowchart LR;
   resourceshare["AWS RAM <br/> Resource <br/> Share"]
   subgraph "AWS Virtual Private Cloud"
     lattice[AWS VPC <br/> Lattice <br/> Service]
-    service1[Service 1];
-    service2[Service 2];
-    service3[Service 3];
+    service1[Subgraph 1];
+    service2[Subgraph 2];
+    service3[Subgraph 3];
   end;
 
   router --> resourceshare
@@ -45,11 +44,13 @@ To allow Apollo GraphOS Cloud to send traffic to your private subgraphs, you mus
 3. Share the service(s) with the Apollo AWS Organization.
 4. Provide the service(s) routing information in your Apollo Organization configuration page.
 
+This guide offers step-by-step instructions for each stage.
+
 > The AWS Console interface may differ slightly from the screenshots in this guide.
 
 ### Step 1. Create AWS VPC Lattice target groups
 
-A Lattice **target group** is a collection of targets, or compute resources, that run your application or service. You need to set these up so your Lattice services ... Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
+A Lattice **target group** is a collection of targets, or compute resources, that run your application or service. You need to set these up so your Lattice services can accurately route requests. Check out the [AWS documentation](https://docs.aws.amazon.com/vpc-lattice/latest/ug/target-groups.html) to learn more.
 
 1. In the AWS Console for your region of choice, go to the VPC service page:
 - [US East (N. Virginia) — `us-east-1`](https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1)
@@ -217,7 +218,7 @@ The last step now is to associate your resource share with the Apollo Organizati
 
 ⚠️ **Note**:
 - You only have 12 hours to associate your resource share, otherwise AWS Resource Access Manager will fail to process the invitation and you will have to restart this step.
-- For security purposes, we recommend you to continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](#remove-access-to-private-subgraphs) and restart this step.
+- For security purposes, we recommend you to continue to the next step immediately after creating the resource share. If you see that the resource share was **Accepted** or **Failed** in the AWS console and you did not follow step 4 of this guide, follow the steps to [remove access to private subgraphs](#removing-access-to-private-subgraphs) and restart this step.
 
 </blockquote>
 
@@ -238,163 +239,156 @@ The last step now is to associate your resource share with the Apollo Organizati
 
 <img class="screenshot" alt="AWS VPC resource share page" src="../../../img/cloud-dedicated/resource-share-summary.jpg" />
 
-5. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
-6. Click the **Create New Graph** tab at the top right of the screen.
+Setup from this point differs based on if this is [your first private subgraph](#setup-for-new-private-subgraphs) or if you're adding this [service to an existing graph](#setup-for-existing-graphs).
 
-### If this is your first private subgraph:
-1. Follow the onboarding steps to create a graph with a new private subgraph.
+#### Setup for new private subgraphs
+
+1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
+2. Click the **Create New Graph** tab at the top right of the screen.
+3. Follow Studio's onboarding steps to create a graph with a new private subgraph.
 
 <img
   className="screenshot"
   alt="Onboarding a new private supergraph"
-  src="../../img/cloud-dedicated/onboard-private-supergraph.jpg"
+  src="../../../img/cloud-dedicated/onboard-private-supergraph.jpg"
   width="500"
 />
 
-2. On the **GraphQL Endpoint** step, select the link `My endpoint is not directly accessible` at the bottom of the page.
+4. When promped to **Provide your GraphQL API endpoint**, select the link **My endpoint is not directly accessible** at the bottom of the page.
 
 <img
   className="screenshot"
   alt="Select private subgraph option"
-  src="../../img/cloud-dedicated/select-private-subgraph-option.jpg"
+  src="../../../img/cloud-dedicated/select-private-subgraph-option.jpg"
   width="500"
 />
 
-3. Choose the backend Cloud Provider you want to use for your private subgraph, and choose the region where your subgraph should be provisioned.
+5. Choose the backend provider you want to use for your private subgraph and the region where your subgraph should be provisioned.
 
-> All private subgraphs in a GraphOS Cloud Router must be in the same region.
+> All private subgraphs connected to a GraphOS Cloud Router must be in the same region.
 
 <img
   className="screenshot"
   alt="Choosing a backend Cloud Provider"
-  src="../../img/cloud-dedicated/choose-cloud-provider-region.jpg"
+  src="../../../img/cloud-dedicated/choose-cloud-provider-region.jpg"
   width="500"
 />
 
-4. In the next step, paste the ARN of the resource share you created and copied from your AWS Console, then press the **Link my Resource** button. Press the **Next** button to continue.
+6. Paste the ARN of the resource share you created and copied from your AWS Console, then click **Link my Resource** and **Next** to continue.
 
 <img
   className="screenshot"
   alt="Linking a Lattice resource"
-  src="../../img/cloud-dedicated/link-lattice-resource.jpg"
+  src="../../../img/cloud-dedicated/link-lattice-resource.jpg"
   width="500"
 />
 
-5. From the dropdown menu, select the Lattice service that you would like to connect to your GraphOS Router. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
+7. In the modal, select the **Private** option, then select the AWS service you want to add from the dropdown menu. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
 
 <img
   className="screenshot"
   alt="Selecting a private Lattice service"
-  src="../../img/cloud-dedicated/select-private-lattice-service.jpg"
+  src="../../../img/cloud-dedicated/select-private-service.jpg"
   width="500"
 />
 
-6. Add a **Service Name** that will describe your Lattice service. This name will be used to identify your Lattice service in the GraphOS Studio UI.
+8. Add a **Service Name** to describe your Lattice service. This name will be used to identify your Lattice service in GraphOS Studio.
 
 <img
   className="screenshot"
   alt="Adding a Service Name"
-  src="../../img/cloud-dedicated/add-lattice-service-name.jpg"
-  width="500"
+  src="../../../img/cloud-dedicated/add-lattice-service-name.jpg"
+  width="300"
 />
 
-7. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload** button.
-
-> Why Do You Need to Provide the GraphQL Schema?
-When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+9. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload Schema** button.
 
 <img
   className="screenshot"
   alt="Adding a private schema"
-  src="../../img/cloud-dedicated/upload-private-schema.jpg"
+  src="../../../img/cloud-dedicated/upload-private-schema.jpg"
   width="500"
 />
 
-8. On the next step, update the ID and the name of the Supergraph that you want to add this private subgraph to. An ID and name are automatically generated based on your organization's name, but you can change both to suit your needs.
+<ExpansionPanel title="Why do I need to provide a GraphQL Schema?">
+
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+
+</ExpansionPanel>
+
+10. Update the ID and the name of the supergraph that you want to add this private subgraph to. An ID and name are automatically generated based on your organization's name, but you can change both as needed.
 
 <img
   className="screenshot"
   alt="Configuring a private supergraph"
-  src="../../img/cloud-dedicated/configure-private-supergraph.jpg"
-  width="500"
+  src="../../../img/cloud-dedicated/configure-private-supergraph.jpg"
+  width="400"
 />
 
-9. To finish, click the **Create GraphOS Router** button.
+11. To finish, click **Create GraphOS Router**.
 
 <img
   className="screenshot"
   alt="Pressing the Create GraphOS Router button"
-  src="../../img/cloud-dedicated/create-graphos-router.jpg"
-  width="500"
+  src="../../../img/cloud-dedicated/create-graphos-router.jpg"
+    width="200"
 />
 
-Congratulations! You have now created a GraphOS Cloud Router with a private subgraph.
+Congratulations! You've now created a GraphOS Cloud Router with a private subgraph.
 
-### If you are adding this service to an existing graph:
-1. Go to the **Subgraphs** tab of your existing graph.
+#### Setup for existing graphs
 
-<img
-  className="screenshot"
-  alt="Visiting the Subgraphs tab"
-  src="../../img/cloud-dedicated/visit-subgraphs-tab.jpg"
-  width="500"
-/>
-
-2. Click the **Add a Subgraph** button on the right of the page.
+1. Go to the graph you want to connect in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
+2. From the left sidebar, open the **Subgraphs** tab of your graph.
+3. Click **Add a Subgraph** on the right of the page.
 
 <img
   className="screenshot"
   alt="Clicking the Add a Subgraph button"
-  src="../../img/cloud-dedicated/add-private-subgraph.jpg"
+  src="../../../img/cloud-dedicated/add-private-subgraph.jpg"
   width="500"
 />
 
-3. In the modal, select the **Private** option, then select the AWS service you want to add from the dropdown menu. 
+4. In the modal, select the **Private** option, then select the AWS service you want to add from the dropdown menu. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
 
 <img
   className="screenshot"
   alt="Selecting a private service from existing services"
-  src="../../img/cloud-dedicated/select-private-service.jpg"
+  src="../../../img/cloud-dedicated/select-private-service.jpg"
   width="500"
 />
 
-4. A default path of `/api/graphql` is automatically added to the URL. You can change this path if you want to.
-
-<img
-  className="screenshot"
-  alt="Add a url path for your private subgraph"
-  src="../../img/cloud-dedicated/add-private-url-path.jpg"
-  width="500"
-/>
-
-5. Add a **Service Name** that will describe your Lattice service. This name will be used to identify your Lattice service in the GraphOS Studio UI.
+5. Add a **Service Name** to describe your Lattice service. This name will be used to identify your Lattice service in GraphOS Studio.
 
 <img
   className="screenshot"
   alt="Adding a Service Name"
-  src="../../img/cloud-dedicated/add-service-name.jpg"
-  width="500"
+  src="../../../img/cloud-dedicated/add-lattice-service-name.jpg"
+  width="300"
 />
 
-6. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload** button.
-
-> Why Do You Need to Provide the GraphQL Schema?
-When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+6. Paste the GraphQL schema for this subgraph in the **Schema** field.  You can also upload a schema file by clicking the **Upload Schema** button.
 
 <img
   className="screenshot"
-  alt="Uploading the GraphQL schema"
-  src="../../img/cloud-dedicated/additional-private-subgraph-schema.jpg"
+  alt="Adding a private schema"
+  src="../../../img/cloud-dedicated/upload-private-schema.jpg"
   width="500"
 />
 
-7. To finish, click the **Add Subgraph** button.
+<ExpansionPanel title="Why do I need to provide a GraphQL Schema?">
 
-Congratulations! You have now added a private subgraph to your GraphOS Cloud Router.
+When your AWS resource is set to private, it isn't accessible by external services by default. This ensures a high level of security for your data, but it also means extra steps are needed to enable communication between your resource and our system. We need to know the schema of your GraphQL API so that we can generate the correct queries and mutations to send to your subgraph.
+
+</ExpansionPanel>
+
+7. To finish, click **Add Subgraph**.
+
+Congratulations! You've now added a private subgraph to your GraphOS Cloud Router.
 
 ## Removing access to private subgraphs
 
-Keep in mind that any existing supergraph that sends traffic to your private subgraphs will stop working once you remove access for Apollo GraphOS Cloud.
+To remove Apollo GraphOS Cloud access to private subgraphs you need to both remove resource shares and service network associations. Keep in mind that any existing supergraph that sends traffic to your private subgraphs will stop working once you remove access.
 
 ### Remove resource shares
 
@@ -442,14 +436,6 @@ Deleting the network association can take a few seconds. Once the network associ
 
 ## Frequently asked questions
 
-#### I've added a new service to my resource share, but it doesn't appear in my private subgraphs. How can I fix this?
-
-Apollo GraphOS Cloud does not automatically scan your resource shares for new Lattice services. If you add a service, you can manually trigger a scan by going to your Apollo Organization settings page and clicking on the **Rescan subgraphs** button.
-
-#### I want to use AWS VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
-
-Yes. Apollo GraphOS Cloud will associate your Lattice services with its own service network, and you can associate a Lattice service with multiple service networks. You can also create multiple Lattice target groups or Lattice services for the same load balancer, IP addresses, Lambda functions, or other resources supported by Lattice target groups.
-
 #### How does Apollo GraphOS Cloud prevent other users from accessing my private subgraphs?
 
 When you associate a resource share for the first time, Apollo GraphOS Cloud will scan the Lattice services contained in the resource share to retrieve their ARNs and domain names.
@@ -457,3 +443,11 @@ When you associate a resource share for the first time, Apollo GraphOS Cloud wil
 When you add a private subgraph to one of your supergraphs, GraphOS Cloud will check that the domain for that subgraph matches one of the Lattice services you have associated with your Apollo Organization.
 
 As a second line of defense, supergraphs use AWS IAM permissions and SigV4 to only allow traffic to the subgraphs in the same Apollo organization.
+
+#### I've added a new service to my resource share, but it doesn't appear in my private subgraphs. How can I fix this?
+
+Apollo GraphOS Cloud does not automatically scan your resource shares for new Lattice services. If you add a service, you can manually trigger a scan by going to your Apollo Organization settings page and clicking on the **Rescan subgraphs** button.
+
+#### I want to use AWS VPC Lattice within my own organization. Can I still use Lattice for private subgraphs?
+
+Yes. Apollo GraphOS Cloud will associate your Lattice services with its own service network, and you can associate a Lattice service with multiple service networks. You can also create multiple Lattice target groups or Lattice services for the same load balancer, IP addresses, Lambda functions, or other resources supported by Lattice target groups.
